--- a/CucumberChess/pom.xml
+++ b/CucumberChess/pom.xml
@@ -76,6 +76,20 @@
 		<version>2.12.2</version>
 		<scope>provided</scope>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
+	<dependency>
+    	<groupId>org.junit.jupiter</groupId>
+    	<artifactId>junit-jupiter-engine</artifactId>
+    	<version>5.3.1</version>
+    	<scope>test</scope>
+	</dependency>	
+	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
+	<dependency>
+    	<groupId>org.junit.jupiter</groupId>
+    	<artifactId>junit-jupiter-params</artifactId>
+    	<version>5.3.1</version>
+    	<scope>test</scope>
+	</dependency>
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 	<dependency>
 		<groupId>org.junit.jupiter</groupId>
