--- a/CucumberChess/pom.xml
+++ b/CucumberChess/pom.xml
@@ -122,6 +122,18 @@
 		<artifactId>cucumber-junit</artifactId>
 		<version>1.2.5</version>
 		<scope>test</scope>
-	</dependency>    
+	</dependency> 
+	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+	<dependency>
+	    <groupId>com.aventstack</groupId>
+    	<artifactId>extentreports</artifactId>
+    	<version>3.1.5</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/com.vimalselvam/cucumber-extentsreport -->
+	<dependency>
+    	<groupId>com.vimalselvam</groupId>
+    	<artifactId>cucumber-extentsreport</artifactId>
+    	<version>3.1.1</version>
+	</dependency>	   
   </dependencies>
 </project>
